Fix quick task prompt layout and overlapping tag colours

--- a/src/app/pages/day-view/day-view.component.scss
+++ b/src/app/pages/day-view/day-view.component.scss
@@ -64,10 +64,23 @@ h3 {
 .add-task-card {
   width: 100%;
   display: none;
+
+  mat-card {
+    display: flex;
+    flex-direction: column;
+    margin: 0.5rem;
+    margin-top: 0;
+    cursor: pointer;
+    align-items: center;
+  }
 }
 
 .add-task-field {
   width: 100%;
+  height: 35px;
+  font-weight: 500;
+  font-family: "Oswald";
+  text-align: center;
 }
 
 .editing {
